[package]
name = "archive_pr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { features = ["derive"], version = "4.5.18" }
reqwest = { features = ["json"], version = "0.12.7" }
serde = { features = ["derive"], version = "1.0.210" }
serde_json = "1.0.128"
tokio = { features = ["full"], version = "1.40.0" }
